--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         void main(void) {
             gl_Position = vec4((coordinates + translations) * u_xformMatrix, 1.0);
+            gl_PointSize = 10.0;
             vColor = color;
         }
     </script>
